--- a/inyamibwavillage-frontend/home.html
+++ b/inyamibwavillage-frontend/home.html
@@ -1,89 +1,280 @@
 <!DOCTYPE html>
 <html lang="rw">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ahabanza - Inyamibwa Village</title>
-  <link rel="stylesheet" href="styles.css" />
-  <style>
-  body {
-    margin: 0;
-    font-family: sans-serif;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Ahabanza - Inyamibwa Village</title>
+
+<style>
+:root {
+  --blue: #00aeef;
+  --yellow: #fcd116;
+  --green: #007a33;
+  --text-dark: #1c1c1c;
+  --background: #f5f5f5;
+  --white: #ffffff;
+  --gray: #f0f0f0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: sans-serif;
+  background: linear-gradient(to bottom right, var(--blue), var(--green));
+  color: var(--text-dark);
+  min-height: 100vh;
+}
+
+h1, h2 {
+  color: var(--blue);
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--blue);
+  color: white;
+  padding: 1rem 2rem;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  flex-wrap: wrap;
+}
+
+.navbar h2 {
+  margin: 0;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.navbar ul {
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+  padding-bottom: 0.2rem;
+  border-bottom: 2px solid transparent;
+  transition: border 0.3s ease;
+}
+
+.navbar a.active,
+.navbar a:hover {
+  border-bottom: 2px solid var(--yellow);
+}
+
+.hamburger {
+  display: none;
+  font-size: 1.8rem;
+  background: none;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.content {
+  max-width: 800px;
+  margin: 4rem auto;
+  position: relative;
+  height: 520px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.panel {
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 10px;
+  padding: 1.5rem;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+  max-width: 90%;
+  width: 90%;
+  height: 520px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  animation: slideLoop 10s infinite;
+  opacity: 0;
+  transform: translateX(100%);
+  position: absolute;
+}
+
+.panel:nth-child(1) {
+  animation-delay: 0s;
+}
+.panel:nth-child(2) {
+  animation-delay: 5s;
+}
+
+@keyframes slideLoop {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  10%, 40% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+}
+
+.panel.paused {
+  animation-play-state: paused !important;
+}
+
+.update {
+  background: var(--gray);
+  padding: 1rem;
+  border-left: 4px solid var(--yellow);
+  margin-top: 1rem;
+  border-radius: 5px;
+}
+
+@media (max-width: 700px) {
+  .hamburger {
+    display: block;
+  }
+
+  .navbar ul {
+    flex-direction: column;
+    width: 100%;
+    background: linear-gradient(to bottom right, var(--blue), var(--green));
+    position: absolute;
+    top: 60px;
+    left: 0;
+    transition: max-height 0.3s ease-in-out;
+    overflow: hidden;
+    max-height: 0;
+    display: flex;
+    gap: 1rem;
+    height: calc(100vh - 60px);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .navbar ul.show {
+    max-height: 100vh;
+  }
+
+  .navbar li {
+    width: 80%;
+  }
+
+  .navbar li a {
+    display: block;
+    width: 100%;
     padding: 1rem;
+    text-align: center;
+    background-color: var(--yellow);
+    color: #000;
+    font-weight: bold;
+    border-radius: 10px;
+    text-decoration: none;
+    transition: background 0.3s ease;
   }
 
-  .content {
-    max-width: 800px;
-    margin: auto;
+  .navbar li a:hover {
+    background-color: #e6b800;
   }
-
-  .welcome, .communique {
-    margin-top: 2rem;
-  }
-
-  .update {
-    background: #f0f0f0;
-    padding: 1rem;
-    border-left: 4px solid #fcd116;
-    margin-bottom: 1rem;
-    border-radius: 5px;
-  }
+}
 </style>
 </head>
 
 <body>
-  <nav class="navbar">
-    <h2>🏡 Inyamibwa</h2>
-    <ul id="navLinks"></ul>
-  </nav>
+<nav class="navbar">
+  <h2>🏡 Inyamibwa</h2>
+  <button class="hamburger" onclick="toggleMenu()">☰</button>
+  <ul id="navLinks"></ul>
+</nav>
 
-  <main class="content">
-    <section class="welcome">
-      <h1>Murakaza neza!</h1>
-      <p>Turakwishimiye ku rubuga rw'umudugudu wa Inyamibwa. Hano uzahasanga amakuru agezweho, ibitekerezo, n'ubuyobozi bw'umudugudu wawe.</p>
-    </section>
+<main class="content">
+  <section class="panel welcome">
+    <h1>Murakaza neza!</h1>
+    <p>Twishimiye kubakira k'urubuga rwacu rw'inyamibwa. Uru rubuga rugenewe kubahuza no kubagezaho amakuru atandukanye yerekeye umudugudu w’Inyamibwa. Turifuza gukomeza gufasha buri wese kubona serivisi nziza no kugaragaza ibitekerezo byubaka Umudugudu.Turabashimira gukomeza kubahiriza gahunda z Igihugu kandi turabizeza ubufatanye buhamye n’ubwuzuzanye.</p>
+  </section>
 
-    <section class="communique">
-      <h2>📣 Itangazo ry’Umudugudu</h2>
-      <div id="communiqueContainer">
-        <p>Biracyashakishwa...</p>
-      </div>
-    </section>
-  </main>
+  <section class="panel communique">
+    <h2>📣 Itangazo ry’Umudugudu</h2>
+    <div id="communiqueContainer">
+      <p>Biracyashakishwa...</p>
+    </div>
+  </section>
+</main>
 
-  <script src="config/api.js"></script>
-  <script src="shared.js"></script>
-  <script>
-    renderNav('home');
+<script src="config/api.js"></script>
+<script src="shared.js"></script>
+<script>
+  renderNav('home');
 
-    const loggedUser = JSON.parse(localStorage.getItem('loggedUser'));
-    const token = loggedUser?.token;
+  const loggedUser = JSON.parse(localStorage.getItem('loggedUser'));
+  const token = loggedUser?.token;
 
-    fetch(`${window.API_BASE_URL}/api/thoughts?category=update`, {
-      headers: token ? { Authorization: 'Bearer ' + token } : {}
+  fetch(`${window.API_BASE_URL}/api/thoughts?category=update`, {
+    headers: token ? { Authorization: 'Bearer ' + token } : {}
+  })
+    .then(res => res.json())
+    .then(data => {
+      const container = document.getElementById('communiqueContainer');
+      if (!data.length) {
+        container.innerHTML = '<p>Nta tangazo ryabonetse.</p>';
+        return;
+      }
+
+      container.innerHTML = data.map(item => `
+        <div class="update">
+          <p>${item.message}</p>
+          <small>
+            ${item.full_name ? `By: ${item.full_name}` : ''}
+            • ${new Date(item.created_at).toLocaleString('rw-RW')}
+          </small>
+        </div>
+      `).join('');
     })
-      .then(res => res.json())
-      .then(data => {
-        const container = document.getElementById('communiqueContainer');
-        if (!data.length) {
-          container.innerHTML = '<p>Nta tangazo ryabonetse.</p>';
-          return;
-        }
+    .catch(() => {
+      document.getElementById('communiqueContainer').innerHTML =
+        '<p>Ntitwabashije kubona itangazo.</p>';
+    });
 
-        container.innerHTML = data.map(item => `
-          <div class="update">
-            <p>${item.message}</p>
-            <small>
-              ${item.full_name ? `By: ${item.full_name}` : ''}
-              • ${new Date(item.created_at).toLocaleString('rw-RW')}
-            </small>
-          </div>
-        `).join('');
-      })
-      .catch(() => {
-        document.getElementById('communiqueContainer').innerHTML =
-          '<p>Ntitwabashije kubona itangazo.</p>';
-      });
-  </script>
+  function toggleMenu() {
+    const navLinks = document.getElementById('navLinks');
+    navLinks.classList.toggle('show');
+  }
+
+  // NEW: Pause/resume sliding on touch/click
+  const panels = document.querySelectorAll('.panel');
+
+  panels.forEach(panel => {
+    panel.addEventListener('mousedown', pausePanels);
+    panel.addEventListener('touchstart', pausePanels);
+
+    panel.addEventListener('mouseup', resumePanels);
+    panel.addEventListener('touchend', resumePanels);
+  });
+
+  function pausePanels() {
+    panels.forEach(p => p.classList.add('paused'));
+  }
+
+  function resumePanels() {
+    panels.forEach(p => p.classList.remove('paused'));
+  }
+</script>
 </body>
 </html>
